--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
              </div>
              
              <div class="size">
-                 <button class="active">39</button>
+                 <button>39</button>
                  <button>40</button>
-                 <button>42</button>
+                 <button class="active">42</button>
                  <button>44</button>
              </div>
 
@@ -38,5 +38,6 @@
 
          </div>
      </div>
+     <script src="js/app.js"></script>
 </body>
 </html>
